# pidge

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
pidge/: __init__.py  __main__.py  core.py  dashboard.py  examples.py  main.py  run.py  ui.py  web_ui_template.html
pidge/sample_data/: fake_expenses.csv
pidge/tests/: test_core.py  test_dashboard.py  test_examples.py  test_main.py  test_mapper.py  test_ui.py
pidge/tests/fixtures/: __init__.py  data.py  mapper.py  rules.py
pidge/ui/: __init__.py  mapper.py  ui.py  web_ui_template.html
pidge/ui/css/: webui.css
