[build-system]
requires = [ "poetry-core>=1.2.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pidge"
version = "0.1.2"
description = "pidge helps with the creation of mappings for tabular string data"
readme = "README.md"
authors = ["Konrad Wölms <konrad.woelms@gmail.com>",]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
panel = "^0.14.4"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
faker = "^18.3.1"
ipykernel = "^6.22.0"
twine = "^4.0.2"

[tool.coverage.run]
branch = true
omit = [ "pidge/tests/*",]
